--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.11",
@@ -34,6 +35,7 @@
   },
   "browserslist": [
     "iOS >= 7",
-    "Android >= 4"
+    "Android >= 4",
+    "not dead"
   ]
 }
