--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "number-precision": "^1.2.0",
     "query-string": "^6.2.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.0",
+    "vue-icon-font": "^1.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
