--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "svg-sprite-loader": "^4.1.3",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   },
