--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-resources-loader": "^1.2.1",
     "svg-sprite-loader": "^4.1.3",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "vconsole": "^3.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.5.17"
   },
