--- a/package.json
+++ b/package.json
@@ -9,35 +9,36 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.11",
     "number-precision": "^1.2.0",
-    "query-string": "^6.2.0",
+    "query-string": "^6.5.0",
     "vue": "^2.5.21",
-    "vue-i18n": "^8.5.0",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "vue-i18n": "^8.11.2",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.1",
-    "@vue/cli-service": "^3.2.0",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.11.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
-    "svg-sprite-loader": "^4.1.3",
+    "svg-sprite-loader": "^4.1.6",
     "uglifyjs-webpack-plugin": "^2.1.0",
     "vconsole": "^3.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "tar": ">=4.4.2"
   },
   "browserslist": [
     "iOS >= 7",
