--- a/package.json
+++ b/package.json
@@ -23,22 +23,23 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
     "svg-sprite-loader": "^4.1.6",
-    "uglifyjs-webpack-plugin": "^2.1.0",
+    "tar": ">=4.4.2",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "vconsole": "^3.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.5.21",
-    "tar": ">=4.4.2"
+    "vue-template-compiler": "^2.5.21"
   },
   "browserslist": [
     "iOS >= 7",
