--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
@@ -35,7 +35,7 @@
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
     "svg-sprite-loader": "^4.1.6",
-    "tar": ">=4.4.2",
+    "tar": "^4.4.9",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "vconsole": "^3.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
