--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "axios": ">=0.19.0",
+    "axios": "^0.19.0",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
@@ -36,6 +36,7 @@
     "style-resources-loader": "^1.2.1",
     "svg-sprite-loader": "^4.1.6",
     "tar": "^4.4.9",
+    "querystringify": ">=2.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "vconsole": "^3.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
