--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.12.0",
+    "eslint-utils": "^1.4.3",
+    "node-sass": "^4.13.0",
     "sass-loader": "^7.3.1",
-    "style-resources-loader": "^1.2.1",
+    "style-resources-loader": "^1.3.2",
     "svg-sprite-loader": "^4.1.6",
     "tar": "^4.4.13",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vconsole": "^3.3.4",
-    "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.5.21",
-    "eslint-utils": ">=1.4.1"
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "browserslist": [
     "iOS >= 7",
