--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lodash": "^4.17.15",
     "number-precision": "^1.3.1",
     "query-string": "^6.8.3",
-    "querystringify": ">=2.0.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3",
@@ -35,6 +34,7 @@
     "eslint-utils": "^1.4.3",
     "node-sass": "^4.13.0",
     "sass-loader": "^7.3.1",
+    "serialize-javascript": ">=2.1.1",
     "style-resources-loader": "^1.3.2",
     "svg-sprite-loader": "^4.1.6",
     "tar": "^4.4.13",
