--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
     "fastclick": "^1.0.6",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.15",
