--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "number-precision": "^1.3.2",
     "qs": "^6.9.1",
+    "tracking": "^1.1.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3",
