--- a/package.json
+++ b/package.json
@@ -3,48 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve  --open",
+    "serve": "vue-cli-service serve",
     "dev": "npm run serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "axios": "^0.19.0",
+    "@babel/polyfill": "^7.8.7",
+    "axios": "^0.19.2",
     "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.15",
     "number-precision": "^1.3.2",
-    "qs": "^6.9.1",
+    "qs": "^6.9.3",
     "tracking": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.14.1",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-i18n": "^8.16.0",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "eslint-utils": "^1.4.3",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
-    "serialize-javascript": ">=2.1.1",
-    "style-resources-loader": "^1.3.2",
-    "svg-sprite-loader": "^4.1.6",
+    "serialize-javascript": "^3.0.0",
+    "style-resources-loader": "^1.3.3",
+    "svg-sprite-loader": "^4.2.2",
     "tar": "^4.4.13",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vconsole": "^3.3.4",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^3.6.1"
   },
   "browserslist": [
     "iOS >= 7",
