--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "axios": "^0.19.2",
+    "bs-store": "^1.1.0",
     "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
@@ -20,9 +21,9 @@
     "qs": "^6.9.3",
     "tracking": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.16.0",
+    "vue-i18n": "^8.17.3",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
@@ -30,7 +31,7 @@
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "compression-webpack-plugin": "^2.0.0",
+    "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "eslint-utils": "^1.4.3",
@@ -38,9 +39,10 @@
     "sass-loader": "^7.3.1",
     "serialize-javascript": "^3.0.0",
     "style-resources-loader": "^1.3.3",
-    "svg-sprite-loader": "^4.2.2",
+    "svg-sprite-loader": "^4.2.5",
     "tar": "^4.4.13",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^2.3.5",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "vconsole": "^3.3.4",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
