--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "axios": "^0.19.2",
-    "bs-store": "^1.1.0",
+    "bs-store": "^1.1.1",
     "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
@@ -23,7 +23,7 @@
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.1.6",
-    "vuex": "^3.2.0"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
@@ -35,14 +35,14 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "eslint-utils": "^1.4.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "sass-loader": "^7.3.1",
     "serialize-javascript": "^3.0.0",
     "style-resources-loader": "^1.3.3",
     "svg-sprite-loader": "^4.2.5",
     "tar": "^4.4.13",
-    "terser-webpack-plugin": "^2.3.5",
-    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+    "terser-webpack-plugin": "^2.3.6",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vconsole": "^3.3.4",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
