--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tracking": "^1.1.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
+    "vue-mobile-event": "^1.0.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
