--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
     "axios": "^0.19.2",
-    "bs-store": "^1.1.3",
+    "bs-store": "^1.2.4",
     "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.15",
+    "lz-string": "^1.4.4",
     "number-precision": "^1.4.0",
     "qs": "^6.9.4",
     "tracking": "^1.1.3",
