--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cli3_demo",
   "version": "0.1.0",
   "private": true,
+  "bin": {
+    "my-com": "./bin/myCom.js"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "dev": "npm run serve",
@@ -32,13 +35,21 @@
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.1.0",
+    "chalk": "^4.1.0",
+    "clear": "^0.1.0",
+    "commander": "^5.1.0",
     "compression-webpack-plugin": "^3.1.0",
+    "download-git-repo": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "eslint-utils": "^1.4.3",
+    "figlet": "^1.4.0",
+    "handlebars": "^4.7.6",
     "miragejs": "^0.1.40",
     "mockjs": "^1.1.0",
     "node-sass": "^4.14.1",
+    "open": "^7.0.4",
+    "ora": "^4.0.4",
     "sass-loader": "^7.3.1",
     "serialize-javascript": "^3.1.0",
     "style-resources-loader": "^1.3.3",
@@ -47,6 +58,7 @@
     "vconsole": "^3.3.4",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
+    "watch": "^1.0.2",
     "webpack-bundle-analyzer": "^3.8.0",
     "ws": "^7.3.0"
   },
