--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-i18n": "^8.18.2",
     "vue-mobile-event": "^1.2.6",
     "vue-router": "^3.3.4",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "xlsx": "^0.16.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
