--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.19.2",
     "bs-store": "^2.0.6",
+    "emoji-regex": "^9.2.0",
     "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
