--- a/package.json
+++ b/package.json
@@ -14,30 +14,32 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.19.2",
-    "bs-store": "^2.0.6",
-    "emoji-regex": "^9.2.0",
+    "bs-store": "^2.0.7",
+    "emoji-regex": "^9.2.2",
     "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
     "number-precision": "^1.5.0",
-    "qs": "^6.9.4",
+    "qs": "^6.10.1",
     "tracking": "^1.1.3",
     "vue": "^2.6.12",
-    "vue-i18n": "^8.22.2",
+    "vue-i18n": "^8.24.4",
     "vue-mobile-event": "^1.2.6",
-    "vue-router": "^3.4.9",
-    "vuex": "^3.6.0",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.2",
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "clear": "^0.1.0",
     "commander": "^5.1.0",
     "compression-webpack-plugin": "^3.1.0",
@@ -46,23 +48,23 @@
     "eslint-plugin-vue": "^5.2.3",
     "eslint-utils": "^1.4.3",
     "figlet": "^1.5.0",
-    "handlebars": "^4.7.6",
+    "handlebars": "^4.7.7",
     "miragejs": "^0.1.41",
     "mockjs": "^1.1.0",
     "node-sass": "^4.14.1",
-    "open": "^7.3.0",
+    "open": "^7.4.2",
     "ora": "^4.1.1",
     "sass-loader": "^7.3.1",
     "serialize-javascript": "^3.1.0",
     "style-resources-loader": "^1.4.1",
     "svg-sprite-loader": "^4.3.0",
     "terser-webpack-plugin": "^2.3.8",
-    "vconsole": "^3.3.4",
-    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vconsole": "^3.5.2",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-template-compiler": "^2.6.12",
     "watch": "^1.0.2",
     "webpack-bundle-analyzer": "^3.9.0",
-    "ws": "^7.4.1"
+    "ws": "^7.4.5"
   },
   "browserslist": [
     "iOS >= 7",
