--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lz-string": "^1.4.4",
     "number-precision": "^1.5.0",
     "qs": "^6.10.1",
+    "tiny-async-pool": "^1.2.0",
     "tracking": "^1.1.3",
     "vue": "^2.6.12",
     "vue-i18n": "^8.24.4",
@@ -51,9 +52,9 @@
     "handlebars": "^4.7.7",
     "miragejs": "^0.1.41",
     "mockjs": "^1.1.0",
-    "node-sass": "^4.14.1",
     "open": "^7.4.2",
     "ora": "^4.1.1",
+    "sass": "^1.35.2",
     "sass-loader": "^7.3.1",
     "serialize-javascript": "^3.1.0",
     "style-resources-loader": "^1.4.1",
