--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
     "bs-store": "^2.0.7",
+    "crypto-js": "^4.1.1",
     "emoji-regex": "^9.2.2",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.21",
