--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "vue-cli-service serve",
     "dev": "npm run serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "modern": "vue-cli-service build --modern"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
