--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "bs-store": "^2.0.7",
     "crypto-js": "^4.1.1",
     "emoji-regex": "^9.2.2",
@@ -25,12 +25,12 @@
     "qs": "^6.10.1",
     "tiny-async-pool": "^1.2.0",
     "tracking": "^1.1.3",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-i18n": "^8.24.4",
     "vue-mobile-event": "^1.2.6",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
-    "xlsx": "^0.17.0"
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.2",
@@ -71,5 +71,14 @@
     "iOS >= 8",
     "Android >= 6.0",
     "not dead"
+  ],
+  "engines": {
+    "node": ">=14",
+    "pnpm": ">=3"
+  },
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
   ]
 }
